# zotero-sync

./: .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  searchindex.js  test.py
.github/workflows/: python-app.yml  python-package.yml  sphinx.yml
docs/: conf.py  index.rst
tests/: test_zotero_sync.py
zotero_sync/: __main__.py  api.py  click.py  fs.py
