[tool.poetry]
name = "zotero-sync"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
click = "^7.1.2"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"
flake8 = "^3.8.3"
sphinx = "^3.2.1"
recommonmark = "^0.6.0"
sphinxcontrib-napoleon = "^0.7"
autodock = "^0.0.2"
autodoc = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
